[project]
authors = [{name = "dinhtruongng", email = "tonytruong23305@gmail.com"}]
dependencies = []
name = "url_shortener"
requires-python = ">=3.11,<3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
url_shortener = { path = ".", editable = true }

[tool.pixi.tasks]
