[project]
authors = [{name = "dinhtruongng", email = "tonytruong23305@gmail.com"}]
name = "url_shortener"
requires-python = ">=3.11,<3.12"
version = "0.1.0"
dependencies = ["fastapi[standard]>=0.118.0,<0.119", "redis>=6.4.0,<7", "uvicorn[standard]"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
url_shortener = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytest = ">=8.4.2,<9"
